# matrices

./: CMakeLists.txt  EquationSolverTest.cpp  Main  Main.cpp  Matrix.cpp  Matrix.h  MatrixTest.cpp  MatrixTest.h  README.md  Solution.cpp  Solution.h  TestMatrix  TestMatrix.cpp  Theorems.h  Vectors.cpp  Vectors.h
Main.dSYM/Contents/Resources/DWARF/: Main
TestMatrix.dSYM/Contents/: Info.plist
TestMatrix.dSYM/Contents/Resources/DWARF/: TestMatrix
include/linalg/: EquationSolverTest.h  FloatingPoint.h  Matrix.h  Solution.h  Theorems.h  Vectors.h
src/: CMakeLists.txt
src/linalg/: Demo.cpp  EquationSolverTest.cpp  Main.cpp  Matrix.cpp  MatrixTest.cpp  Solution.cpp  Theorems.cpp  Vectors.cpp
test/: CMakeLists.txt  EquationSolverTest.cpp  unit_tests.cpp
